waiting for backend

--- a/src/app/templates/shop.component.html
+++ b/src/app/templates/shop.component.html
@@ -1,7 +1,34 @@
 <headerClient>
 </headerClient>
-<div id="shop">
-    <p>Shop</p>
-    <button (click)="buy()"></button>
-</div>
+<section class="planet-section" style="margin-bottom: 120px;">
+    <div class="container with-light-line-and-glow w-container ">
+        <div data-duration-in="300" data-duration-out="100" class="w-tabs">
+
+            <div class="tabs-content w-tab-content">
+                <div data-w-tab="The Moon" class="tab-pane w-tab-pane w--tab-active news_block" style="opacity: 1; transition: opacity 300ms;padding-left: 288px;">
+                    <div class="destination-heading">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <h4 class="heading-3">Pick a booster</h4>
+                            </div>
+                            <div class="row">
+                                Booster List
+                            </div>
+                            <div class="row">
+                                <div class="col-md-2 offset-md-10"><button type="button" class="btn btn-dark" (click)="buy()">Buy</button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="alert alert-message">
+                                    You don't have enough gold to buy a booster.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="left-side-white left-side-white--news" style="margin-top: 70px;max-height:unset;"></div>
+    </div>
+</section>
 <logister></logister>
