--- a/src/assets/css/shop.component.css
+++ b/src/assets/css/shop.component.css
@@ -23,3 +23,20 @@ md-toolbar-row {
   bottom: 20px;
   right: 20px;
   color: white; }
+
+
+label > input{ /* HIDE RADIO */
+  visibility: hidden; /* Makes input not-clickable */
+  position: absolute; /* Remove input from document flow */
+}
+label > input + img{ /* IMAGE STYLES */
+  cursor:pointer;
+  border:2px solid transparent;
+}
+label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
+  border:2px solid #f00;
+}
+
+.booster {
+  width: 300px;
+}
