--- a/src/app/templates/forum.component.html
+++ b/src/app/templates/forum.component.html
@@ -1,57 +1,71 @@
 <headerClient></headerClient>
 
 <div class="container" style="margin-top: 80px">
-    <div class="col-md-12">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>FORUMS</h2>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <h3>BLABLA</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                General
-            </div>
-            <div class="col-md-6">
-                Last Description blablablablablabla
-            </div>
-            <div class="col-md-2">
-                Last Message slkdjaksldjasdl at 32:45
-            </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2 style="color: white;">FORUMS</h2>
         </div>
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Nb Responses</th>
-                <th>Last Message</th>
-                <th>Created</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let discussion of allDiscussions" [routerLink]="['/forum', discussion.id]">
-                <td>{{discussion.title}}</td>
-                <td>{{discussion.author_id}}</td>
-                <td>{{discussion.nb_response}}</td>
-                <td>{{discussion.last_message}}</td>
-                <td>{{discussion.created}}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="add-discussion">
-    <div class="add-discussion__content">
-        <input class="add-discussion__content__discussion-title" type="text" [(ngModel)]="new_discussion.title" name="title" placeholder="title" id="add-title">
-        <textarea class="add-discussion__content__discussion-text" [(ngModel)]="new_message.text" name="text" placeholder="text" id="add-text"></textarea>
-        <p (click)="add_discussion()">create</p>
+    <div class="row">
+        <div class="col-md-3 forum">
+            Title
+        </div>
+        <div class="col-md-3 forum">
+            Author
+        </div>
+        <div class="col-md-1 forum">
+            Created
+        </div>
+        <div class="col-md-2 forum">
+            Nb Responses
+        </div>
+        <div class="col-md-3 forum">
+            Last Message
+        </div>
+    </div>
+    <div class="row" *ngFor="let discussion of allDiscussions" [routerLink]="['/forum', discussion.id]">
+        <div class="col-md-3 forum">
+            {{discussion.title}}
+        </div>
+        <div class="col-md-3 forum">
+            {{discussion.author_id}}
+        </div>
+        <div class="col-md-1 forum">
+            Created
+        </div>
+        <div class="col-md-2 forum">
+            {{discussion.last_message}}
+        </div>
+        <div class="col-md-3 forum">
+            {{discussion.created}}
+        </div>
+    </div>
+
+    <br>
+
+    <div class="jumbotron new-message">
+        <div class="form-group row">
+            <div class="col-md-5">
+                <input class="form-control" id="title" type="text" placeholder="Title" [(ngModel)]="new_discussion.title">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-md-12">
+                <input class="form-control" id="message" type="text" placeholder="Message" [(ngModel)]="new_message.text">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 offset-md-10"><button type="button" class="btn btn-dark" (click)="add_discussion()">Submit</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="alert alert-success" *ngIf="successMessage">
+                Your post has been created !
+            </div>
+            <div class="alert alert-danger" *ngIf="errorMessage">
+                {{ errorMessage }}
+            </div>
+        </div>
     </div>
 </div>
 
