--- a/src/app/templates/discussion.component.html
+++ b/src/app/templates/discussion.component.html
@@ -1,31 +1,57 @@
 <headerClient></headerClient>
 
-<section class="forum">
-    <p>{{ discussion.title }}</p>
-
-    <div class="col-md-3">
-        <h1>User</h1>
-    </div>
-    <div class="col-md-7">
-        <h1>Message</h1>
-    </div>
-    <div class="col-md-2">
-        <h1>Date</h1>
-    </div>
-    <div *ngFor="let message of messages">
-        <div class="col-md-3">
-            <p class="forum-list">{{message.author_id}}</p>
-        </div>
-        <div class="col-md-7">
-            <p class="forum-list">{{message.text}}</p>
-        </div>
-        <div class="col-md-2">
-            <p class="forum-list">{{message.post_date}}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 style="color: white;">{{ discussion.title }}</h2>
         </div>
     </div>
 
-    <div class="col-md-10"><input class="forum-answer" style="width: 100%" [(ngModel)]="new_message.text"></div>
-    <div class="col-md-2"><button class="btn btn-default forum-answer" (click)="post_message()">Answers</button></div>
-</section>
+    <div class="row">
+        <div class="col-md-3 forum">
+            User
+        </div>
+        <div class="col-md-7 forum">
+            Message
+        </div>
+        <div class="col-md-2 forum">
+            Date
+        </div>
+    </div>
+    <div class="row" *ngFor="let message of messages">
+        <div class="col-md-3 forum">
+            {{message.author_id}}
+        </div>
+        <div class="col-md-7 forum">
+            {{message.text}}
+        </div>
+        <div class="col-md-2 forum">
+            {{message.post_date}}
+        </div>
+    </div>
+
+
+    <br>
+
+    <div class="jumbotron new-message">
+        <div class="form-group row">
+            <div class="col-md-12">
+                <input class="form-control" id="message" type="text" placeholder="Message" [(ngModel)]="new_message.text">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 offset-md-10"><button type="button" class="btn btn-dark" (click)="post_message()">Submit</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="alert alert-success" *ngIf="successMessage">
+                Your post has been created !
+            </div>
+            <div class="alert alert-danger" *ngIf="errorMessage">
+                {{ errorMessage }}
+            </div>
+        </div>
+    </div>
+</div>
 
 <logister></logister>
