--- a/src/app/templates/smithy.component.html
+++ b/src/app/templates/smithy.component.html
@@ -52,7 +52,12 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2 offset-md-10"><button type="button" class="btn btn-dark" (click)="forge()">Forge</button>
+                                <div class="col-md-2 offset-md-10 buyButton">
+                                    <a (click)="forge()">Forge</a>
+                                    <div class="corner-upper-left"></div>
+                                    <div class="corner-upper-right"></div>
+                                    <div class="corner-bottom-right"></div>
+                                    <div class="corner-bottom-left"></div>
                                 </div>
                             </div>
                             <div class="row">
